--- a/2018-08/2018-08-23.md
+++ b/2018-08/2018-08-23.md
@@ -1,38 +1,48 @@
-## 简洁的箭头函数
+### 简洁的箭头函数
 
 普通写法
 
-<pre><code>var func = (x, y) => {return x + y}</code></pre>
+```
+var func = (x, y) => {return x + y}
+```
 
 单个参数可以去掉参数括号
 
-<pre><code>var func = x => {return x + y}</code></pre>
+```
+var func = x => {return x * x}
+```
 
 隐式返回值，省略return
 
-<pre><code>var func = x => x * x</code></pre>
+```
+var func = x => x * x
+```
 
 >在多行代码逻辑中，必须使用明确的<code>return</code>语句
 
-如果要返回对象字面量，则必须加上<code>{}</code>，因为花括号`{}`里面的代码被解析为一系列语句
+如果要返回对象字面量，则必须加上`()`，因为花括号`{}`里面的代码被解析为一系列语句
 
-<pre><code>var func = () => {{foo: 1}}</code></pre>
+```
+var func = () => ({foo: 1})
+```
 
 箭头函数的简写在一些回调语句中是很爽的，只需一行代码就可搞定
 
-<pre>
-<code>let arr = [1, 2 ,3]</code>
-<code>arr.map(item => item + 2)</code>
-</pre>
+```
+let arr = [1, 2, 3]
+arr.map(item => item * 2)
+```
 
 还可以与对象解构结合使用
 
-<pre><code>({name, age}) => name + ' age is ' + age</code></pre>
+```
+({name, age}) => name + ' age is ' + age
+```
 
 上面的代码等价于
 
-<pre>
-<code>function (man) {</code>
-<code>  man.name + ' age is ' + man.age</code>
-<code>}</code>
-</pre>
+```
+function(man){
+    man.name + ' age is ' + man.age
+}
+```
