--- a/2018-08/2018-08-23.md
+++ b/2018-08/2018-08-23.md
@@ -18,7 +18,7 @@ var func = x => {return x * x}
 var func = x => x * x
 ```
 
->在多行代码逻辑中，必须使用明确的<code>return</code>语句
+>在多行代码逻辑中，必须使用明确的`return`语句
 
 如果要返回对象字面量，则必须加上`()`，因为花括号`{}`里面的代码被解析为一系列语句
 
