--- a/2018-08/2018-08-27.md
+++ b/2018-08/2018-08-27.md
@@ -8,7 +8,7 @@ JSON.stringify(value[, replacer [, space]])
 
 下面说说`replacer`的具体使用方式：
 
-**1、如果该参数为`null`或者为提供，则对象所有的属性都会被序列化**
+**1、如果该参数为`null`或者未提供，则对象所有的属性都会被序列化**
 
 ```
 JSON.stringify({
