--- a/2018-08/2018-08-29.md
+++ b/2018-08/2018-08-29.md
@@ -32,7 +32,7 @@ main.dataset.tip = 'hello'
 * 1、`dataset`后面跟的是`data-`后面的字符串，是`dataset.tip`不是<del>`dataset.data-tip`</del>
 * 2、如果属性名称中还包含`-`，则需要转成驼峰命名的方式，如`data-tip-color`为`dataset-tipColor`
 
-或者，如果你在使用jQUERY的话，也可以这样获取
+或者，如果你在使用jQuery的话，也可以这样获取
 
 ```
 $('#main').attr('data-tip')
