--- a/2018-09/2018-09-10.md
+++ b/2018-09/2018-09-10.md
@@ -42,20 +42,20 @@ var url = "http://xxx.com?age=20&name=tom&lucy"
 
 想必大家也都能理解，这个参数中包含`&`，就被当做URL本身的参数结构了，关键是如何解决这个问题呢？
 
-**enwxxxcode-styleURI**
+**encodeURI**
 
-可能有的同学知道JavaScript中有个`enwxxxcode-styleURI()`方法用来对URI进行编码。接下来我们试试
+可能有的同学知道JavaScript中有个`encodeURI()`方法用来对URI进行编码。接下来我们试试
 
 ```
-enwxxxcode-styleURI(url)
+encodeURI(url)
 ```
 
 得到的是什么结果呢？抱歉，和原url一模一样，没有任何变化。为什么会这样呢？
 
-这是因为`enwxxxcode-styleURI`强调的是给整个URL进行编码，用特殊的UTF-8编码替换所有无效的字符，从而让浏览器能够接受和理解。比如
+这是因为`encodeURI`强调的是给整个URL进行编码，用特殊的UTF-8编码替换所有无效的字符，从而让浏览器能够接受和理解。比如
 
 ```
-enwxxxcode-styleURI('http://xxx.com?age=20 &name=王二狗&lucy')
+encodeURI('http://xxx.com?age=20 &name=王二狗&lucy')
 ```
 
 编码后的结果为
@@ -66,16 +66,16 @@ enwxxxcode-styleURI('http://xxx.com?age=20 &name=王二狗&lucy')
 
 可以看到，里面的空格和中文都被编码了，而`&`和`=`并未被编码。
 
-**enwxxxcode-styleURIComponent**
+**encodeURIComponent**
 
-相比于`enwxxxcode-styleURI`，`enwxxxcode-styleURIComponent`则强调对URL中的某部分进行彻底编码，比`enwxxxcode-styleURI`编码的范围更大，能够多编码的字符`@#$&=:/,;?+`。
+相比于`encodeURI`，`encodeURIComponent`则强调对URL中的某部分进行彻底编码，比`encodeURI`编码的范围更大，能够多编码的字符`@#$&=:/,;?+`。
 
-可见`?#&`这些本属于URL结构的特殊字符会被`enwxxxcode-styleURIComponent`编码，而不会被`enwxxxcode-styleURI`编码。
+可见`?#&`这些本属于URL结构的特殊字符会被`encodeURIComponent`编码，而不会被`encodeURI`编码。
 
-所以我们改为用`enwxxxcode-styleURIComponent`来解决上面的问题
+所以我们改为用`encodeURIComponent`来解决上面的问题
 
 ```
-enwxxxcode-styleURIComponent("http://xxx.com?age=20&name=tom&lucy")
+encodeURIComponent("http://xxx.com?age=20&name=tom&lucy")
 ```
 
 结果是
@@ -84,12 +84,12 @@ enwxxxcode-styleURIComponent("http://xxx.com?age=20&name=tom&lucy")
 "http%3A%2F%2Fxxx.com%3Fage%3D20%26name%3Dtom%26lucy"
 ```
 
-放到浏览器里面直接不认识，什么情况？请注意，`enwxxxcode-styleURIComponent`是用在对RUL的某部分进行编码，编码的结果为纯粹的字符串，肯定是不能对整个URL运用这个方法的。
+放到浏览器里面直接不认识，什么情况？请注意，`encodeURIComponent`是用在对RUL的某部分进行编码，编码的结果为纯粹的字符串，肯定是不能对整个URL运用这个方法的。
 
 正确的姿势是单独对`name`的值进行编码
 
 ```
-let _name = enwxxxcode-styleURIComponent('tom&lucy')
+let _name = encodeURIComponent('tom&lucy')
 let url = 'http://xxx.com?age=20&name=' + _name
 ```
 
@@ -129,7 +129,7 @@ axios.get('http://xxx.com/test', {
 
 ```
 function enwxxxcode-style(val){
-    return enwxxxcode-styleURIComponent(val).
+    return encodeURIComponent(val).
         replace(/%40/gi, '@').
         replace(/%3A/gi, ':').
         replace(/%24/gi, '$').
@@ -140,10 +140,10 @@ function enwxxxcode-style(val){
 }
 ```
 
-为什么后面多出来这么多`replace`呢？enwxxxcode-styleURIComponent会把`@`编码为`%40`，然后又被替换回去了。所以意思就是，不让enwxxxcode-styleURIComponent编码`@:$,+[]`字符，但是几个关键的字符`#?&`还是会被编码的。
+为什么后面多出来这么多`replace`呢？encodeURIComponent会把`@`编码为`%40`，然后又被替换回去了。所以意思就是，不让encodeURIComponent编码`@:$,+[]`字符，但是几个关键的字符`#?&`还是会被编码的。
 
 **结论**
 
-`enwxxxcode-styleURI`本质上对接口的识别没有任何影响，仅仅是为了让URI更好看。
+`encodeURI`本质上对接口的识别没有任何影响，仅仅是为了让URI更好看。
 
-`enwxxxcode-styleURIComponent`则是彻底解决了特殊字符带来的影响，能够正确识别参数值中的特殊字符。
+`encodeURIComponent`则是彻底解决了特殊字符带来的影响，能够正确识别参数值中的特殊字符。
