--- a/2018-09/2018-09-10.md
+++ b/2018-09/2018-09-10.md
@@ -128,16 +128,16 @@ axios.get('http://xxx.com/test', {
 经测试，结果正确。然后通过查看源码发现axios对每个参数都进行了下面的处理
 
 ```
-function enwxxxcode-style(val){
-    return encodeURIComponent(val).
-        replace(/%40/gi, '@').
-        replace(/%3A/gi, ':').
-        replace(/%24/gi, '$').
-        replace(/%2C/gi, ',').
-        replace(/%20/gi, '+').
-        replace(/%5B/gi, '[').
-        replace(/%5D/gi, ']');
-}
+function encode(val) {
+	  return encodeURIComponent(val).
+	    replace(/%40/gi, '@').
+	    replace(/%3A/gi, ':').
+	    replace(/%24/g, '$').
+	    replace(/%2C/gi, ',').
+	    replace(/%20/g, '+').
+	    replace(/%5B/gi, '[').
+	    replace(/%5D/gi, ']');
+	}
 ```
 
 为什么后面多出来这么多`replace`呢？encodeURIComponent会把`@`编码为`%40`，然后又被替换回去了。所以意思就是，不让encodeURIComponent编码`@:$,+[]`字符，但是几个关键的字符`#?&`还是会被编码的。
