--- a/2018-10/2018-10-10.md
+++ b/2018-10/2018-10-10.md
@@ -13,7 +13,7 @@
 
 1、创建一个 `hello-component.js` 文件，使用 ES6 创建 1 个用来定义组件的类
 
-```
+```js
 class HelloComponent extends HTMLElement {
   render () {
     this.innerHTML = `<h1>Hello Web Component</h1>`
@@ -31,7 +31,7 @@ class HelloComponent extends HTMLElement {
 
 2、注册组件
 
-```
+```js
 window.customElements.define('hello-component', HelloComponent)
 ```
 
@@ -39,7 +39,7 @@ window.customElements.define('hello-component', HelloComponent)
 
 完整的 hello-component.js 为
 
-```
+```js
 class HelloComponent extends HTMLElement {
   render () {
     this.innerHTML = `<h1>Hello Web Component</h1>`
@@ -57,7 +57,7 @@ window.customElements.define('hello-component', HelloComponent)
 
 新建一个 index.html 文件，引入 hello-component.js，并且使用 `<hello-component>` 自定义元素标签
 
-```
+```html
 <!DOCTYPE html>
 <html lang="en">
 <body>
@@ -73,7 +73,7 @@ window.customElements.define('hello-component', HelloComponent)
 
 上面的组件是静态的，接下来我们将 hello-component.js 做一下修改，实现一个响应变化的效果
 
-```
+```js
 class HelloComponent extends HTMLElement {
   static get observedAttributes () {
     return ['data-name']
@@ -103,7 +103,7 @@ window.customElements.define('hello-component', HelloComponent)
 
 然后将 index.html 改成
 
-```
+```html
 <!DOCTYPE html>
 <html lang="en">
 <body>
