--- a/2018-10/2018-10-30.md
+++ b/2018-10/2018-10-30.md
@@ -85,3 +85,7 @@ background-blend-mode: lighten;
 可以看到图标变成了蓝色， F12 动态修改 box 的 color 你会发现图标的颜色也在跟着变。
 
 注意，如果图片是背景透明的 PNG，`background-blend-mode` 是无能为力的，所以需要保证图片为背景白色且非透明。此外，该 CSS 属性除了 IE ，其它主流浏览器均支持。
+
+### demo
+
+[demo](https://codepen.io/huzhengen/pen/ZqNEob)
