11-19 美化再简单不过了

--- a/2018-11/2018-11-19.md
+++ b/2018-11/2018-11-19.md
@@ -17,7 +17,7 @@
 
 外部是一个 div 容器用来包装整个 checkbox，包含不可缺少的 label 元素。然后设置未选中状态的 label 样式
 
-```html
+```css
 .mycheck label {
   display: inline-block;
   border: 1px solid #bdc3c7;
@@ -30,7 +30,7 @@
 
 里面的圆圈用 `::before` 来实现可以避免创建更多的元素
 
-```html
+```css
 .mycheck label::before {
   width: 20px;
   height: 20px;
