--- a/2018-12/2018-12-04.md
+++ b/2018-12/2018-12-04.md
@@ -167,3 +167,5 @@ var obj = new Proxy({}, {
 ```
 
 因为 `Reflect.set()` 本身就会返回一个是否设置成功的布尔值。
+
+[第2018-12-06期 漫游 Reflect](https://github.com/huzhengen/dayfront/blob/master/2018-12/2018-12-06.md)
