--- a/2018-08/2018-08-01.md
+++ b/2018-08/2018-08-01.md
@@ -1,5 +1,11 @@
-### “前端早8点”小程序
+# 博文来源
+
+### 来源一 前端早8点
 
 [“前端早8点”小程序](https://www.awesomes.cn/dayfront)
 
 [“前端早8点”网页版](https://zao.awesomes.cn/#/)
+
+### 来源二 前端开发技术日报
+
+[前端开发技术日报](https://github.com/kujian/frontendDaily)
