--- a/2019-01/2019-01-03.md
+++ b/2019-01/2019-01-03.md
@@ -4,9 +4,9 @@
 
 ```html
 <div class="nav">
-  <div class="nav-item"><a>导航1</a></div>
-  <div class="nav-item"><a>导航2</a></div>
-  <div class="nav-item"><a>导航3</a></div>
+  <div class="nav-item"><a>我</a></div>
+  <div class="nav-item"><a>我</a></div>
+  <div class="nav-item"><a>我</a></div>
 </div>
 <style>
 .nav {
